--- a/styles/clock.less
+++ b/styles/clock.less
@@ -10,6 +10,9 @@
 
 @video-width: 70vw;
 
+body{
+  overflow: hidden;
+}
 
 .space {
   width: 2vw;
@@ -31,7 +34,7 @@
   right: 0;
   width: 100vw-@video-width;
   height: 100vh;
-  font-size: 20vw;
+  font-size: 19vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
