--- a/styles/resume.less
+++ b/styles/resume.less
@@ -1,10 +1,8 @@
-body{
+body {
   padding: 0;
   margin: 0;
-  margin-left: 20px;
-  margin-right: 20px;
   color: #24292e;
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   -ms-text-size-adjust: 100%;
@@ -12,81 +10,188 @@ body{
   word-wrap: break-word;
   width: auto;
 }
-ul{
+
+ul {
   padding: 0;
   margin: 0;
   margin-left: 20px;
-  margin-right: 20px;
   color: #24292e;
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   word-wrap: break-word;
 }
-.wrap{
+
+ul {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+li {
+  padding-left: 1em;
+  text-indent: -1em;
+}
+
+li:before {
+  content: "-";
+  font-weight: 800;
+padding-right: 5px;
+}
+
+.wrap {
   margin: 0 auto;
   margin-top: 20px;
   max-width: 860px;
-  min-width: 510px;
+  min-width: 375px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
-h1{
+
+h1 {
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   word-spacing: 2px;
-  letter-spacing: 1px;
+  // letter-spacing: 1px;
   color: #393939;
   margin-top: 1.5rem;
   font-weight: bold;
 }
-.info{
+
+.info {
   display: flex;
   margin-top: 6px;
   position: relative;
-  
+
 }
-.info > div{
+
+.info>div {
   flex: 1;
 }
 
 
-abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
-    font-size: 14px;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    word-spacing: 2px;
-    letter-spacing: 1px;
-    color: #393939;
+abbr,
+acronym,
+address,
+applet,
+article,
+aside,
+audio,
+b,
+big,
+blockquote,
+body,
+canvas,
+caption,
+center,
+cite,
+code,
+dd,
+del,
+details,
+dfn,
+div,
+dl,
+dt,
+em,
+embed,
+fieldset,
+figcaption,
+figure,
+footer,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+hgroup,
+html,
+i,
+iframe,
+img,
+ins,
+kbd,
+label,
+legend,
+li,
+mark,
+menu,
+nav,
+object,
+ol,
+output,
+p,
+pre,
+q,
+ruby,
+s,
+samp,
+section,
+small,
+span,
+strike,
+strong,
+sub,
+summary,
+sup,
+table,
+tbody,
+td,
+tfoot,
+th,
+thead,
+time,
+tr,
+tt,
+u,
+ul,
+var,
+video {
+  font-size: 14px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  word-spacing: 2px;
+  // letter-spacing: 1px;
+  color: #393939;
 }
-.sperate{
+
+.sperate {
   width: 100%;
   border-bottom: 1px solid rgb(204, 204, 204);
   margin-bottom: 10px;
 }
 
-.flex-between{
+.flex-between {
   display: flex;
   justify-content: space-between;
 }
-.flex-start{
+
+.flex-start {
   display: flex;
   background-color: pink;
   justify-content: flex-start;
   align-items: center;
 }
-.title, .item-title{
+
+.title,
+.item-title {
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   word-spacing: 2px;
-  letter-spacing: 1px;
+  // letter-spacing: 1px;
   color: #393939;
   font-weight: bold;
- 
+
 }
-.item-title{
+
+.item-title {
   margin-top: 8px;
   margin-bottom: 4px;
   font-size: 13px;
