--- a/styles/resume.less
+++ b/styles/resume.less
@@ -11,67 +11,9 @@ body {
   width: auto;
 }
 
-ul {
-  padding: 0;
-  margin: 0;
-  margin-left: 20px;
-  color: #24292e;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  word-wrap: break-word;
+.ml5 {
+  margin-left: 0px;
 }
-
-ul {
-  list-style: none;
-  margin-left: 0;
-  padding-left: 0;
-}
-
-li {
-  padding-left: 1em;
-  text-indent: -1em;
-}
-
-li:before {
-  content: "-";
-  font-weight: 700;
-padding-right: 5px;
-}
-
-.wrap {
-  margin: 0 auto;
-  margin-top: 20px;
-  max-width: 860px;
-  min-width: 375px;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-h1 {
-  font-size: 14px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  word-spacing: 2px;
-  // letter-spacing: 1px;
-  color: #393939;
-  margin-top: 1.5rem;
-  font-weight: bold;
-}
-
-.info {
-  display: flex;
-  margin-top: 6px;
-  position: relative;
-
-}
-
-.info>div {
-  flex: 1;
-}
-
 
 abbr,
 acronym,
@@ -161,10 +103,91 @@ video {
   color: #393939;
 }
 
-.sperate {
+ul {
+  padding: 0;
+  margin: 0;
+  margin-left: 20px;
+  color: #24292e;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  word-wrap: break-word;
+}
+
+ul {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+li {
+  padding-left: 1em;
+  text-indent: -1em;
+  margin-top: 2px;
+  font-size: 13px;
+}
+
+li:before {
+  content: "-";
+  font-weight: 700;
+  padding-right: 5px;
+}
+
+.wrap {
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  max-width: 860px;
+  min-width: 375px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+@media only screen and (max-width: 600px) {
+  .wrap {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+h1 {
+  font-size: 15px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  word-spacing: 2px;
+  // letter-spacing: 1px;
+  color: #393939;
+  margin-top: 1.5rem;
+  font-weight: 800;
+}
+
+.info {
+  display: flex;
+  margin-top: 6px;
+  position: relative;
+
+}
+
+.info>div {
+  flex: 1;
+}
+
+
+
+
+.divider {
   width: 100%;
   border-bottom: 1px solid rgb(204, 204, 204);
   margin-bottom: 10px;
+}
+
+.divider-sub {
+  width: 100%;
+  border-bottom: 1px dashed #999;
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .flex-between {
@@ -191,8 +214,16 @@ video {
 
 }
 
+.title {
+  border-left: 5px solid #666;
+  background-color: #eee;
+  padding-left: 8px;
+  // margin-left: 5px;
+}
+
 .item-title {
   margin-top: 8px;
   margin-bottom: 4px;
   font-size: 13px;
+  // margin-left: 5px;
 }
