--- a/styles/resume.less
+++ b/styles/resume.less
@@ -55,6 +55,10 @@ ul {
   position: relative;
   font-size: 13px;
 }
+.wife li{
+  margin-top: 5px;
+  font-size: 14px;
+}
 
 .wrap li span,
 .wrap li a {
