--- a/styles/resume.less
+++ b/styles/resume.less
@@ -29,6 +29,9 @@ body {
   // letter-spacing: 1px;
   color: #393939;
 }
+ .wrap h1{
+   font-size: 15px;
+ }
 
 
 ul {
@@ -161,14 +164,17 @@ h1 {
   // margin-left: 5px;
 }
 
-.item-title {
+.wrap .item-title {
   margin-top: 8px;
   margin-bottom: 4px;
   font-size: 13px;
   // margin-left: 5px;
 }
+.wrap .item-title span{
+  font-size: 14px;
+}
 .wrap .name{
-  font-size: 16px;
+  font-size: 17px;
 }
 .wrap .sex{
   font-size: 12px;
